# NexusVoice

./: .gitignore  README.md  eslint.config.js  index.html  justfile  package-lock.json  package.json  pill.html  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
audio/: mod.rs  pipeline.rs
auth/: errors.rs  mod.rs  service.rs  session.rs  tokens.rs
database/: connection.rs
database/dto/: dictionary.rs  transcript.rs  user.rs
database/migrations/: 0001_init.sql  0002_refresh_tokens.sql  0003_word_frequency.sql
database/models/: dictionary.rs  mod.rs  refresh_token.rs  transcript.rs  user.rs
database/repositories/: dictionary.rs  mod.rs  token.rs  transcript.rs  user.rs  word_frequency.rs
hardware/: detector.rs  mod.rs  profile.rs  provider.rs  sysinfo_provider.rs
inference/: engine.rs  errors.rs  mock.rs  mod.rs  onnx.rs  whisper.rs
models/: mod.rs  selection.rs
postprocess/: dictionary_engine.rs  mod.rs
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  pill-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json  pill.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  auth.rs  commands.rs  database.rs  hardware.rs  inference.rs  main.rs  models.rs  pipeline.rs  postprocess.rs  preprocess.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampler.rs
src-tauri/src/auth/: errors.rs  mod.rs  service.rs  session.rs  tokens.rs
src-tauri/src/database/: connection.rs  mod.rs
src-tauri/src/database/dto/: dictionary.rs  refresh_token.rs  transcript.rs  user.rs
src-tauri/src/database/migrations/: 0003_word_frequency.sql  0004_transcript_duration.sql  0005_indexes_and_word_count.sql  0006_dictionary_hits.sql  0007_transcripts_fts.sql  0008_fts_tokenchars.sql
src-tauri/src/database/models/: dictionary.rs  transcript.rs  user.rs
src-tauri/src/database/repositories/: dictionary.rs  mod.rs  token.rs  transcript.rs  user.rs  word_frequency.rs
src-tauri/src/hardware/: detector.rs  mod.rs  profile.rs  provider.rs  sysinfo_provider.rs
src-tauri/src/inference/: downloader.rs  engine.rs  mod.rs  provider.rs
src-tauri/src/postprocess/: dictionary_engine.rs  mod.rs  word_tracker.rs
src-tauri/src/preprocess/: chunker.rs  denoise.rs  mod.rs  stitcher.rs  vad.rs
src-tauri/tests/: migration_upgrade_test.rs
src-tauri/windows/: cuda-installer-hooks.nsh
src/components/: AuthGuard.tsx  ErrorBoundary.tsx  Layout.tsx  ModelManagerModal.tsx  ModelPickerModal.tsx
src/components/ui/: button.tsx  input.tsx  tabs.tsx
src/lib/: commands.ts  errors.ts  events.ts  hooks.ts  models.ts  routes.ts  utils.ts
src/pages/: Auth.tsx  Dashboard.tsx  Dictionary.tsx  Settings.tsx
src/pages/settings/: AboutTab.tsx  GeneralTab.tsx  HotkeySection.tsx
src/pill/: PillApp.css  PillApp.tsx
src/store/: authSlice.ts  dictionarySlice.ts  invokeWithRefresh.ts  modelSlice.ts  transcriptSlice.ts  uiSlice.ts  useAppStore.ts
src/test/: App.test.tsx  Auth.test.tsx  Dashboard.test.tsx  Dictionary.test.tsx  Settings.test.tsx  setup.ts  useAppStore.test.ts
src/types/: index.ts
