[package]
name = "nexusvoice"
version = "0.7.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4"
opener = "0.8"
strsim = "0.11"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.9"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = "0.6"
enigo = "0.2"
cpal = "0.17"
reqwest = { version = "0.13", features = ["blocking", "stream"] }
futures-util = "0.3"
nnnoiseless = "0.5.2"
voice_activity_detector = "0.2.1"

whisper-rs = "0.16"
rubato = "0.16.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Dxgi", "Win32_System_SystemInformation"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
